[package]
name = "cap"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "2.0"
structopt = "0.3"

[dependencies.rusqlite]
version = "0.21"
features = ["bundled", "load_extension"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
